5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1592_1800.log
== TEST (2019-03-31 21:20:47) 
-- CODE:
a = 1
b = 2 
c = 3

# formula 
for = (a ** 2 + b ** 2 + c ** 2) / (a +  b + c)

print(round(for, n))
-- ERROR:
File "XXXX", line 6
    for = (a ** 2 + b ** 2 + c ** 2) / (a +  b + c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:21:26) 
-- CODE:
a = 1
b = 2 
c = 3

# formula 
for = ( a ** 2 + b ** 2 + c ** 2 ) / ( a +  b + c )

print(round(for, n))
-- ERROR:
File "XXXX", line 6
    for = ( a ** 2 + b ** 2 + c ** 2 ) / ( a +  b + c )
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:22:06) 
-- CODE:
a = input("a: ")
b = input("b: ")
c = input("c: ")

# formula 
for = ( a ** 2 + b ** 2 + c ** 2 ) / ( a +  b + c )

print(round(for, n))
-- ERROR:
File "XXXX", line 6
    for = ( a ** 2 + b ** 2 + c ** 2 ) / ( a +  b + c )
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:22:21) 
-- CODE:
a = input("a: ")
b = input("b: ")
c = input("c: ")

# formula 
for = (a ** 2 + b ** 2 + c ** 2) / (a +  b + c)

print(round(for, n))
-- ERROR:
File "XXXX", line 6
    for = (a ** 2 + b ** 2 + c ** 2) / (a +  b + c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:24:06) 
-- CODE:
a = input("a: ")
b = input("b: ")
c = input("c: ")

# formula 
for = (a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)

print(round(for, n))
-- ERROR:
File "XXXX", line 6
    for = (a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:24:17) 
-- CODE:
a = input("a: ")
b = input("b: ")
c = input("c: ")

# formula 
(a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)

print(round(for, n))
-- ERROR:
File "XXXX", line 8
    print(round(for, n))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:24:37) 
-- CODE:
a = input("a: ")
b = input("b: ")
c = input("c: ")

# formula 
(a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)

print(round(for, 7))
-- ERROR:
File "XXXX", line 8
    print(round(for, 7))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:24:44) 
-- CODE:
a = input("a: ")
b = input("b: ")
c = input("c: ")

# formula 
for = (a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)

print(round(for, 7))
-- ERROR:
File "XXXX", line 6
    for = (a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:25:02) 
-- CODE:
a = input("a: ")
b = input("b: ")
c = input("c: ")

# formula 
x = (a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)

print(round(for, 7))
-- ERROR:
File "XXXX", line 8
    print(round(for, 7))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:25:12) 
-- CODE:
a = input("a: ")
b = input("b: ")
c = input("c: ")

# formula 
x = (a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)

print(round(x, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = (a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:32:41) 
-- CODE:
a = input("a: ")
b = input("b: ")
c = input("c: ")

# formula 
x = (a ** 2 + b ** 2 + c ** 2) / (a +  b + c)

print(round(x, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = (a ** 2 + b ** 2 + c ** 2) / (a +  b + c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:32:47) 
-- CODE:
a = input("a: ")
b = input("b: ")
c = input("c: ")

# formula 
x = (a ** 2 + b ** 2 + c ** 2) / (a +  b + c)

print(round(x, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = (a ** 2 + b ** 2 + c ** 2) / (a +  b + c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:33:21) 
-- CODE:
a = input("a: ")
b = input("b: ")
c = input("c: ")

# formula 
x = (a ** 2 + b ** 2 + c ** 2) / (a +  b + c)

print(round(x, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = (a ** 2 + b ** 2 + c ** 2) / (a +  b + c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:33:27) 
-- CODE:
a = input("a: ")
b = input("b: ")
c = input("c: ")

# formula 
x = (a ** 2 + b ** 2 + c ** 2) / (a +  b + c)

print(round(x, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = (a ** 2 + b ** 2 + c ** 2) / (a +  b + c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:33:46) 
-- CODE:
a = input("a: ")
b = input("b: ")
c = input("c: ")

# formula 
x = (a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)

print(round(x, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = (a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:34:42) 
-- CODE:
a = int(input("a: "))
b = int(input("b: "))
c = int(input("c: "))

# formula 
x = (a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)

print(round(x, 7))
-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:34:49) 
-- CODE:
a = int(input("a: "))
b = int(input("b: "))
c = int(input("c: "))

# formula 
x = (a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)

print(round(x, 7))
-- EXECUTION TIME:
0.144099
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1037.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
215349.3654822
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22500.0188679
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:35:37) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))

# formula 
x = (a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)

print(round(x, 7))
-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:35:45) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))

# formula 
x = (a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)

print(round(x, 7))
-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:35:51) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))

# formula 
x = (a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)

print(round(x, 7))
-- EXECUTION TIME:
0.127337
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1037.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
215349.3654822
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22500.0188679
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:36:11) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))

# formula 
x = (a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)

print(round(x, 7))
-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:36:16) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))

# formula 
x = (a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)

print(round(x, 7))
-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:36:27) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))

# formula 
x = (a ** 2) + (b ** 2) + (c ** 2) / (a +  b + c)

print(round(x, 7))
-- EXECUTION TIME:
0.175263
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1037.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
215349.3654822
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22500.0188679
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:39:19) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))

# formula 
x = (a**2) + (b ** 2) + (c ** 2) / (a +  b + c)

print(round(x, 7))
-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:39:52) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))

# formula 
x = (a ** 2) + (b ** 2) + (c ** 2) // (a +  b + c)

print(round(x, 7))
-- OUTPUT:
1037.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:40:50) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))

# formula 
x = (a ** 2) + (b ** 2) + (c ** 2)
y = (a +  b + c)
z = x / y
print(round(z, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:40:58) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))

# formula 
x = (a ** 2) + (b ** 2) + (c ** 2)
y = (a +  b + c)
z = x / y
print(round(z, 7))
-- EXECUTION TIME:
0.13194
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
